# compiler

./: .gitignore  CMakeLists.txt  README.md  eExpression4  main.cpp  syntax.txt  tokens.csv
generator/: CMakeLists.txt  Generator.cpp  Generator.h
generator/identifiersScope/: IdentifiersScope.cpp  IdentifiersScope.h
generator/programmObjectModel/: CMakeLists.txt  FunctionDefinition.cpp  FunctionDefinition.h  INode.cpp  INode.h  Programm.cpp  Programm.h  TypeCheckErrors.cpp  buildList.h
generator/programmObjectModel/expression/: BaseExpression.h  BinaryOperandExpression.cpp  BinaryOperandExpression.h  ExpressionFactory.cpp  ExpressionFactory.h  FunctionCall.cpp  FunctionCall.h  RawValue.cpp  RawValue.h  UnaryOperandExpression.cpp  UnaryOperandExpression.h  Variable.cpp
generator/programmObjectModel/identifiersScope/: IdentifiersScope.cpp  IdentifiersScope.h
generator/programmObjectModel/operator/: AssignmentOperator.cpp  AssignmentOperator.h  FunctionCallOperator.cpp  FunctionCallOperator.h  IOperator.h  OperatorFactory.cpp  OperatorFactory.h  OperatorIf.cpp  OperatorIf.h  OperatorReturn.cpp  OperatorReturn.h  OperatorWhile.cpp  OperatorWhile.h  VariableDefinitionOperator.cpp  VariableDefinitionOperator.h
generator/syntaxTreeObjectModel/: CMakeLists.txt  Expression.cpp  Expression.h  FunctionDefinition.cpp  FunctionDefinition.h  Operator.cpp  Operator.h  Programm.cpp  Programm.h  TypeCheckErrors.cpp  common.h
generator/syntaxTreeObjectModel/expression/: BaseExpression.cpp  BinaryOperandExpression.cpp  ExpressionFactory.h  FunctionCall.h  RowValue.cpp  RowValue.h  UnaryOperandExpression.cpp  Variable.h
generator/syntaxTreeObjectModel/operator/: AssignmentOperator.h  IOperator.h  OperatorFactory.cpp  OperatorFactory.h  OperatorIf.cpp  OperatorReturn.cpp  VariableDefinitionOperator.cpp
generator/tests/: CMakeLists.txt  GeneratorTests.cpp  correctProgramm.txt  input.txt  invalidProgramm.txt  variables.h.in
parser/: .gitignore  CMakeLists.txt  Grammar.cpp  Grammar.h  Parser.cpp  Parser.h  ParserEngin.cpp  ParserEngin.h  ParserTests.cpp  SyntaxTree.cpp  SyntaxTree.h  Token.cpp  TokenProvider.cpp  TokenProvider.h  Tokenizer.cpp  main.cpp
parser/grammar/: CMakeLists.txt  Grammar.cpp  Grammar.h
parser/grammar/parserEngin/: ParserEngin.cpp  ParserEngin.h
parser/grammar/parserEngin/syntaxTree/: SyntaxTree.cpp  SyntaxTree.h
parser/tests/: CMakeLists.txt  ParserTests.cpp  input.txt  invalidInput1.txt  invalidInput2.txt  invalidInput3.txt  output.txt  output1.txt
parser/utils/: JSLikeVectorAdapter.h
tokenizer/: CMakeLists.txt  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  TokenizerTests.cpp
tokenizer/tests/: CMakeLists.txt  TokenizerTests.cpp
